src/main/kotlin/com/example/personal_account/errors/ProfileNotFoundException.kt
package com.example.personal_account.errors

class ProfileNotFoundException(message: String) : RuntimeException(message)